--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,18 @@
 @charset "utf-8";
 /* CSS DOCUMENT */
 
-header button {
-	margin-right:30px;
-}
-header {
-	margin-bottom: 20px;
-}
 
 .container {
-	margin-top: 20px;
 	text-align: center;
 }
 
+.footer {
+  color: white;
+  
+}
+
+.centered {
+	width: 40%;
+	margin: auto;
+	text-align: center;
+}
